code clean up from most recent ide version